Made a program, not working correctly tho

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /Projects/Initials/build/
 /Projects/Initials/nbproject/private/
 /Projects/EggCounter2.5/build/
+/Projects/CounterExtra/nbproject/private/
+/Projects/CounterExtra/build/
+/Projects/LargestDivisor/nbproject/private/
+/Projects/LargestDivisor/build/
