Made a couple small programs

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@
 /Projects/CounterExtra/build/
 /Projects/LargestDivisor/nbproject/private/
 /Projects/LargestDivisor/build/
+/Projects/DiceRoll2.2/nbproject/private/
+/Projects/DiceRoll2.2/build/
+/Projects/NameGreeter2.3/nbproject/private/
+/Projects/NameGreeter2.3/build/
+/Projects/ChangeCounter2.4/nbproject/private/
+/Projects/ChangeCounter2.4/build/
+/Projects/Initials2.6/nbproject/private/
+/Projects/Initials2.6/build/
