Made a wrong exercise, but it was gooooooooood

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /Projects/ChangeCounter2.4/build/
 /Projects/Initials2.6/nbproject/private/
 /Projects/Initials2.6/build/
+/Projects/CRUDExample/nbproject/private/
+/Projects/CRUDExample/build/
